<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wifi_tag_ssid_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_ssid"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wifi_tag_bssid_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_bssid" />

    <EditText
        android:id="@+id/wifi_tag_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip"
        android:ems="10"
        android:hint="@string/wifi_tag" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

</LinearLayout>