<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <ImageView
            android:id="@+id/wifi_connectedto_router"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="2dip"
            android:contentDescription="@string/wifi_router"
            android:src="@drawable/router" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wifi_connectedto_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_ssid"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wifi_connectedto_bssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_bssid" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#696969" />

    <EditText
        android:id="@+id/wifi_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/filter"
        android:visibility="gone"
        android:layout_marginLeft="2dip"
        android:layout_marginRight="2dip" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgcolor"
        android:visibility="gone" >
    </ListView>

    <LinearLayout
        android:id="@+id/wifi_searching"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wifi_searching"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>