<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgcolor"
    android:orientation="horizontal"
    android:paddingBottom="10dip"
    android:paddingLeft="0dip"
    android:paddingRight="10dip"
    android:paddingTop="10dip" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/wifi_row_connected"
            android:layout_width="12dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:src="@drawable/star"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/wifi_row_password"
            android:layout_width="12dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:src="@drawable/lock" />

        <View
            android:layout_width="12dp"
            android:layout_height="1px" />
    </LinearLayout>

    <ImageView
        android:id="@+id/wifi_row_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="2dip"
        android:layout_weight="1"
        android:contentDescription="@string/wifi_wifi"
        android:src="@drawable/wifi" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/wifi_row_ssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_ssid"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wifi_row_bssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_bssid" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|right"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/wifi_row_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_level" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/wifi_row_legend"
                        android:text="@string/wifi_dbm"
                        android:textColor="@color/color_light" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/wifi_row_frequency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_frequency" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/wifi_row_legend"
                        android:text="@string/wifi_mhz"
                        android:textColor="@color/color_light" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wifi_row_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="2dip"
                android:contentDescription="@string/wifi_tag"
                android:src="@drawable/label" />

            <TextView
                android:id="@+id/wifi_row_tag_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wifi_tag"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>