<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <!-- Dummy item to prevent EditText from receiving focus -->

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/map_status"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dip"
                    android:layout_weight="2"
                    android:gravity="center|right"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/map_status_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ProgressBar
                        android:id="@+id/map_status_progressbar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/map_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/map_id_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="Large Text"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/map_session"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/map_session_number_buttons"
                    android:layout_weight="1"
                    layout="@layout/number_buttons" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/map_scans"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/map_scans_number_buttons"
                    android:layout_weight="1"
                    layout="@layout/number_buttons" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/map_delay"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/map_delay_number_buttons"
                    android:layout_weight="1"
                    layout="@layout/number_buttons" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/map_orientation"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/map_direction_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:text="Large Text"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/map_stop_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/map_stop" />

            <Button
                android:id="@+id/map_register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/map_register" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>